Anonymous | Login | 2021-01-26 06:30 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0024932 | Community | [OCCT] OCCT:DRAW | public | 2014-05-15 23:43 | 2016-12-09 16:39 | ||||
Reporter | shoogen | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Linux 64-bit | OS | Debian | OS Version | 7.4 | ||||
Product Version | [OCCT] 6.7.1 | ||||||||
Target Version | [OCCT] 7.1.0 | Fixed in Version | [OCCT] 7.1.0 | ||||||
Summary | 0024932: addsweep does not check if the supplied variable contains a shape | ||||||||
Description | addsweep does not check if the supplied variable contains a shape | ||||||||
Steps To Reproduce | pload ALL vertex v0 0 0 0 vertex v1 1 0 0 edge e1 v0 v1 wire w1 e1 mksweep w1 shape solid1 S addsweep solid1 #exception thrown mksweep w1 shape emptyshape addsweep emptyshape #exception thrown mksweep w1 addsweep undefined #exception thrown | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_6 bug24932 | ||||||||
Attached Files | |||||||||
![]() |
|
(0059092) git (administrator) 2016-10-25 15:06 |
Branch CR24932 has been created by msv. SHA-1: 098be99470bb0bbad66a9b13e9dedda163c0aa98 Detailed log of new commits: Author: msv Date: Tue Oct 25 15:06:46 2016 +0300 0024932: addsweep does not check if the supplied variable contains a shape Check for null shape has been added in the command addsweep implementation. |
(0059213) mkv (tester) 2016-10-26 20:12 |
Dear BugMaster, Branch CR24932 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 098be99470bb0bbad66a9b13e9dedda163c0aa98 Number of compiler warnings: occt component : Linux: 1 (0 on master) Windows: 0 (0 on master) MacOS : 1 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1123 There are new additional compilation warnings on Linux and MacOS platforms: http://jenkins-test-07.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_13912/job/CR24932-master-OCCT-Debian70-64-opt-compile/1/warnings17Result/ [^] BRepTest_SweepCommands.cxx:582, GNU C Compiler 4 (gcc), Priority: Normal suggest parentheses around ‘&&’ within ‘||’ [-Wparentheses] http://jenkins-test-07.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_13912/job/CR24932-master-OCCT-MacOS-opt-compile/1/warnings7Result/ [^] BRepTest_SweepCommands.cxx:581, Clang (LLVM based), Priority: Normal '&&' within '||' Regressions/Differences/Improvements: No regressions/differences Testing cases: Testing on Linux: occt component : Total MEMORY difference: 91084772 / 90336003 [+0.83%] Total CPU difference: 19189.049999999766 / 19232.479999999847 [-0.23%] products component : Total MEMORY difference: 30093640 / 30089650 [+0.01%] Total CPU difference: 5282.709999999978 / 5340.149999999966 [-1.08%] Testing on Windows: occt component : Total MEMORY difference: 57212680 / 57220230 [-0.01%] Total CPU difference: 18429.599337698546 / 18211.026336598778 [+1.20%] products component : Total MEMORY difference: 21307588 / 21272088 [+0.17%] Total CPU difference: 5087.894614499947 / 5194.536898099958 [-2.05%] There are no differences in images found by testdiff. |
(0059214) mkv (tester) 2016-10-26 20:13 |
Dear msv, Branch CR24932 has been rejected due to: - additional warnings |
(0059225) git (administrator) 2016-10-27 09:41 |
Branch CR24932 has been updated by msv. SHA-1: 31efe26cd0567f05fb079c6063763ba9c9109487 Detailed log of new commits: Author: msv Date: Thu Oct 27 09:40:51 2016 +0300 // eliminate warning |
(0059226) msv (developer) 2016-10-27 09:42 |
Source code corrected. |
(0059333) git (administrator) 2016-10-28 15:05 |
Branch CR24932 has been updated forcibly by mkv. SHA-1: 8bb4971fd65f741bfcf87f2b84b18b05aaedcb36 |
(0059748) git (administrator) 2016-11-02 11:40 |
Branch CR24932 has been updated by mkv. SHA-1: 6293e1132c993ad767b92d7b779f434aff08688c Detailed log of new commits: Author: mkv Date: Wed Nov 2 11:39:49 2016 +0300 Test case for issue CR24932 |
(0059749) mkv (tester) 2016-11-02 11:40 |
Dear BugMaster, Branch CR24932 was rebased on current master of occt git-repository. SHA-1: 8bb4971fd65f741bfcf87f2b84b18b05aaedcb36 |
(0059750) mkv (tester) 2016-11-02 11:40 |
Dear BugMaster, Branch CR24932 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 8bb4971fd65f741bfcf87f2b84b18b05aaedcb36 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1128 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR24932-master-OCCT/Debian70-64/bugs/modalg_6/bug24932.html [^] http://occt-tests/CR24932-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug24932.html [^] bugs modalg_6 bug24932: FAILED Testing on Linux: occt component : Total MEMORY difference: 90866858 / 90747705 [+0.13%] Total CPU difference: 19376.809999999823 / 19313.539999999895 [+0.33%] products component : Total MEMORY difference: 30547963 / 30591759 [-0.14%] Total CPU difference: 5343.699999999988 / 5294.23999999997 [+0.93%] Testing on Windows: occt component : Total MEMORY difference: 57311741 / 57321116 [-0.02%] Total CPU difference: 18042.67005739861 / 18220.18359529866 [-0.97%] products component : Total MEMORY difference: 21509492 / 21474056 [+0.17%] Total CPU difference: 5221.478270799966 / 5260.400520299964 [-0.74%] There are no differences in images found by testdiff. |
(0059751) mkv (tester) 2016-11-02 11:41 |
Dear msv, Branch CR24932 has been rejected due to: - failed test-case for issue |
(0059770) git (administrator) 2016-11-02 12:51 |
Branch CR24932 has been updated by msv. SHA-1: 2b845f0786d904d1c6493e89c4441c9b70f62773 Detailed log of new commits: Author: msv Date: Wed Nov 2 12:51:44 2016 +0300 Test case has been corrected. |
(0059771) msv (developer) 2016-11-02 12:52 |
Dear mkv, test case has been updated. Please test. |
(0059780) mkv (tester) 2016-11-02 13:48 |
Dear BugMaster, test case bugs/modalg_6/bug24932 is OK now: http://occt-tests/CR24932-master-OCCT/Debian70-64/bugs/modalg_6/bug24932.html [^] http://occt-tests/CR24932-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug24932.html [^] bugs modalg_6 bug24932: OK |
(0059781) mkv (tester) 2016-11-02 13:48 |
Dear BugMaster, Branch CR24932 is TESTED. |
(0061175) git (administrator) 2016-12-07 11:25 |
Branch CR24932 has been deleted by kgv. SHA-1: 2b845f0786d904d1c6493e89c4441c9b70f62773 |
![]() |
|||
occt: master 8878d0ec
Timestamp: 2016-11-02 12:43:50 Author: msv Committer: apn [ Details ] [ Diff ] |
0024932: addsweep does not check if the supplied variable contains a shape Check for null shape has been added in the command addsweep implementation. // eliminate warning Test case for issue CR24932 Test case has been corrected. |
||
mod - src/BRepTest/BRepTest_SweepCommands.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_6/bug24932 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2014-05-15 23:43 | shoogen | New Issue | |
2014-05-15 23:43 | shoogen | Assigned To | => mkv |
2014-06-04 15:28 | mkv | Assigned To | mkv => ifv |
2014-06-04 15:28 | mkv | Status | new => assigned |
2014-09-12 12:58 | abv | Target Version | => 7.1.0 |
2016-10-25 15:06 | git | Note Added: 0059092 | |
2016-10-25 15:07 | msv | Assigned To | ifv => bugmaster |
2016-10-25 15:07 | msv | Status | assigned => resolved |
2016-10-25 15:07 | msv | Status | resolved => reviewed |
2016-10-25 15:18 | mkv | Assigned To | bugmaster => mkv |
2016-10-26 20:12 | mkv | Note Added: 0059213 | |
2016-10-26 20:13 | mkv | Note Added: 0059214 | |
2016-10-26 20:13 | mkv | Assigned To | mkv => msv |
2016-10-26 20:13 | mkv | Status | reviewed => assigned |
2016-10-27 09:41 | git | Note Added: 0059225 | |
2016-10-27 09:41 | msv | Assigned To | msv => mkv |
2016-10-27 09:41 | msv | Status | assigned => resolved |
2016-10-27 09:41 | msv | Status | resolved => reviewed |
2016-10-27 09:42 | msv | Note Added: 0059226 | |
2016-10-28 15:05 | git | Note Added: 0059333 | |
2016-11-02 11:40 | git | Note Added: 0059748 | |
2016-11-02 11:40 | mkv | Note Added: 0059749 | |
2016-11-02 11:40 | mkv | Note Added: 0059750 | |
2016-11-02 11:41 | mkv | Note Added: 0059751 | |
2016-11-02 11:41 | mkv | Assigned To | mkv => msv |
2016-11-02 11:41 | mkv | Status | reviewed => feedback |
2016-11-02 11:41 | mkv | Test case number | => bugs modalg_6 bug24932 |
2016-11-02 12:51 | git | Note Added: 0059770 | |
2016-11-02 12:52 | msv | Note Added: 0059771 | |
2016-11-02 12:52 | msv | Assigned To | msv => mkv |
2016-11-02 13:48 | mkv | Note Added: 0059780 | |
2016-11-02 13:48 | mkv | Note Added: 0059781 | |
2016-11-02 13:48 | mkv | Assigned To | mkv => bugmaster |
2016-11-02 13:48 | mkv | Status | feedback => tested |
2016-11-03 17:10 | apn | Changeset attached | => occt master 8878d0ec |
2016-11-03 17:10 | apn | Assigned To | bugmaster => apn |
2016-11-03 17:10 | apn | Status | tested => verified |
2016-11-03 17:10 | apn | Resolution | open => fixed |
2016-12-07 11:25 | git | Note Added: 0061175 | |
2016-12-09 16:30 | aiv | Status | verified => closed |
2016-12-09 16:39 | aiv | Fixed in Version | => 7.1.0 |
Copyright © 2000 - 2021 MantisBT Team |