0024932: addsweep does not check if the supplied variable contains a shape

Check for null shape has been added in the command addsweep implementation.

// eliminate warning

Test case for issue CR24932
Test case has been corrected.